--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "car-maintenance-project",
   "version": "0.1.0",
+  "proxy": "http://localhost:5001",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
