--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
@@ -11,13 +9,25 @@
 # production
 /build
 
+# db stuff
+cmpdb.db
+cmpdbOG.db
+create-tables.txt
+desktop.ini
+response.json())
+
 # misc
 .DS_Store
-#.env
-#.env.local
-#.env.development.local
-#.env.test.local
-#.env.production.local
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# frontend ignores
+/frontend/node_modules
+/frontend/.gitignore
+/frontend/README.md
 
 npm-debug.log*
 yarn-debug.log*
