--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ response.json())
 /frontend/node_modules
 /frontend/.gitignore
 /frontend/README.md
+/frontend/package-lock.json
 
 npm-debug.log*
 yarn-debug.log*
